--- a/hu.bme.aut.gergelyszaz.BGS.Server/Procfile
+++ b/hu.bme.aut.gergelyszaz.BGS.Server/Procfile
@@ -1,1 +1,1 @@
-web: java $JAVA_OPTS -cp target/classes:target/dependency/* WebSocketServer
+worker: java $JAVA_OPTS -cp target/classes:target/dependency/* WebSocketServer
