--- a/hu.bme.aut.gergelyszaz.BGS.Application/pom.xml
+++ b/hu.bme.aut.gergelyszaz.BGS.Application/pom.xml
@@ -46,6 +46,21 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.2.1</version>
+                    <executions>
+                         <execution>
+                             <goals>
+                                 <goal>java</goal>
+                             </goals>
+                         </execution>
+                     </executions>
+                <configuration>
+                    <mainClass>graphics.LoadWindow</mainClass>
+                </configuration>
+            </plugin>     
         </plugins>
     </build>
     <dependencies>
