--- a/hu.bme.aut.gergelyszaz.BGS/pom.xml
+++ b/hu.bme.aut.gergelyszaz.BGS/pom.xml
@@ -66,8 +66,8 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>hu.bme.aut.gergelyszaz.BGL</groupId>
-            <artifactId>BGL</artifactId>
+            <groupId>hu.bme.aut.gergelyszaz.bgs</groupId>
+            <artifactId>bgl</artifactId>
             <version>1.1</version>
         </dependency>
         <dependency>
@@ -88,7 +88,7 @@
         <dependency>
             <groupId>org.eclipse.xtext</groupId>
             <artifactId>org.eclipse.xtext</artifactId>
-            <version>2.8.4</version>
+            <version>2.10.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject</groupId>
@@ -110,11 +110,7 @@
             <artifactId>org.eclipse.xtext.common.types</artifactId>
             <version>2.8.4</version>
         </dependency>
-        <dependency>
-            <groupId>org.eclipse.core</groupId>
-            <artifactId>runtime</artifactId>
-            <version>3.10.0-v20140318-2214</version>
-        </dependency>
+        
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
