--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,10 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<modules>
-		<module>hu.bme.aut.gergelyszaz.BGL</module>
-		<module>hu.bme.aut.gergelyszaz.BGS</module>
-		<module>hu.bme.aut.gergelyszaz.BGS.Server</module>
-		<module>hu.bme.aut.gergelyszaz.BGS.Application</module>
+		<module>BGL</module>
+		<module>BGS</module>
+		<module>Server</module>
+		<module>Application</module>
 	</modules>
 	<build>
 		<pluginManagement>
