--- a/BGS/pom.xml
+++ b/BGS/pom.xml
@@ -99,5 +99,10 @@
             <artifactId>junit</artifactId>
             <version>${junitVersion}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockitoVersion}</version>
+        </dependency>
     </dependencies>
 </project>
